fix: z-index 수정

--- a/app/globals.css
+++ b/app/globals.css
@@ -417,7 +417,7 @@ thead tr th:last-child {
   }
 }
 
-figure {
+figure [data-rehype-pretty-code-figure]{
   position: relative;
   z-index: 5; /* 배경보다 낮은 값을 설정 */
 }
